# avemod

./: .bandit  .dockerignore  .env.example  .gitignore  README.md  conftest.py  pytest.ini
backend/: AGENTS.md  AUDIT_TOOLING_CHANGES.md  CHECKER_1_TO_1_VERIFICATION_REPORT.md  CHECKER_SOURCE_VS_FINANCE_AUDIT.md  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/deploy/: README.md  finance-backend.service  finance.env.example  nginx.finance.ozodbek-akramov.uz.conf  nginx.operator.ozodbek-akramov.uz.conf  remote_deploy_finance_backend.sh
backend/docs/: FULL_TZ_CODE_AUDIT_20260619.md
backend/scripts/: apply_trusted_operator_costs.py  audit_dashboard_finance_vs_wb.py  audit_frontend_placeholder_consistency.py  audit_rbac_account_scope.py  audit_reputation_disabled_mode.py  audit_safe_mutation_endpoints.py  audit_seller_rbac.py  build_control_tower_digest.py  check_deploy_artifact_safety.py  compare_live_bundle_to_db.py  create_data_blockers_costs_fix_audit_bundle.py  create_massive_backend_audit_bundle.py  create_wb_live_test_curl_audit_bundle.py  enable_money_100_readiness_policy.py  export_ai_formula_handoff.py  export_ai_handoff.py  export_endpoint_formula_audit_excel.py  export_full_page_audit_db_scope.py  export_live_backend_final_audit_bundle.py  export_live_backend_full_audit.py  export_manual_cost_template.py  export_money_management_ai_audit.py  final_controlled_pilot_audit.mjs  generate_backend_api_markdown.py  generate_lovable_endpoint_summary.py  generate_static_audit_summary.py  (+21 more)
(+861 files in other folders)
