[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-data-core-backend"
version = "0.1.0"
description = "Finance backend for Seller Portal AI Operator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "cryptography>=42.0.0",
  "apscheduler>=3.10.4",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1.2",
  "email-validator>=2.1.1",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.11.0.86",
  "pillow>=11.2.1",
  "pytesseract>=0.3.13",
  "rapidocr-onnxruntime>=1.4.4",
  "zxing-cpp>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "anyio>=4.4.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "bandit>=1.7.9",
]

[tool.setuptools.packages.find]
include = ["app*"]
